2006-12-07  Sébastien Sablé  <sable.sungard@gmail.com>

	* cmd.c: Corrected core dump in ct_param when in debug mode

	* blk.c, cmd.c, conn.c, ctx.c, databuf.c, datafmt.c, datetime.c,
	iodesc.c, locale.c, money.c, msgs.c, numeric.c: Applied patch from
	Gregory Bond so that python-sybase works with python 2.5

	* setup.py, tests/sybase_dbapi20.py, tests/test_sybase_dbapi20.py:
	Added python-sybase specific tests to dbapi20 and a test runner
	for python-sybase with and without auto_commit

	* tests/dbapi20.py: Extended dbapi20 driver compliance unit test
	suite in order to permit testing drivers without auto-commit

	* tests/dbapi20.py: Added Python DB API 2.0 Anal Compliance Unit
	Test 1.10

2005-04-07 08:46  djc

	* Sybase.py, setup.py, sybasect.c, dist/release-0.37,
	  doc/sybase.tex: Bump release to 0.37.

2005-03-21 16:18  djc

	* ChangeLog, Sybase.py, setup.py, sybasect.c,
	  dist/release-0.37pre3, doc/sybase.tex: Yet another attempt to get
	  a new release out.

2005-03-21 16:13  djc

	* cmd.c, freetds.h, sybasect.h: Fix compilation and remove warnings
	  for FreeTDS.

2005-03-21 10:17  djc

	* .cvsignore: Ignore some files.

2005-03-21 10:03  djc

	* ChangeLog: Updated for new release.

2005-03-21 10:02  djc

	* doc/.cvsignore: Inore documentation temporary files.

2005-03-21 10:02  djc

	* dist/release-0.37pre2: New release.

2005-03-21 09:54  djc

	* Sybase.py, setup.py, sybasect.c, doc/sybase.tex: Bump release to
	  0.37pre2

2005-03-20 14:53  djc

	* Sybase.py: Cursor state fix from Skip Montanaro.

2005-03-20 14:52  djc

	* ctx.c: Callback declaration fix on Windows from Vadim
	  Beloborodov.

2005-03-19 14:36  djc

	* dist/release-0.37pre1: Added test program for memory leak.

2005-03-19 14:29  djc

	* ChangeLog, Sybase.py, setup.py, sybasect.c,
	  dist/release-0.37pre1, doc/sybase.tex: Ready for 0.37pre1
	  release.

2005-03-19 12:48  djc

	* Sybase.py: Consume the CS_STATUS_RESULT internally and set the